--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="animate-pulse"><a href="tel:+79233925999"><i class="fa-solid fa-phone"></i></a></div>
         <div class="bg"></div>
         <video id="video" autoplay muted loop id="myvideo" playsinline>
-            <source src="video1.mp4" type="video/mp4" />
+            <source src="./video1.mp4" type="video/mp4" />
         </video>
         <main>
             <nav class="navbar">
@@ -150,7 +150,7 @@
                     востребован вид восстановительных работ, когда следует исправить небольшие повреждения на корпусе.
                 </p>
                 <video id="content-video" autoplay muted loop id="myvideo" playsinline>
-                    <source src="video2.mp4" type="video/mp4" />
+                    <source src="./video2.mp4" type="video/mp4" />
                 </video>
                 <p>Выполнение этих операций требует высокого профессионализма, ведь качественно сделать восстановление поврежденного корпуса авто можно только при наличии профессионального оборудования и помещений.</p>
                 <h3>Основные этапы кузовного ремонта</h3>
